[package]
name = "candidate-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master"}
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-bags-list = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
codec = { package = "parity-scale-codec", default-features = false, features = ["derive",] }
scale-info = { default-features = false, features = ["derive"] }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-npos-elections = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "codec/std",
  "scale-info/std",
  "sp-std/std",
  "sp-npos-elections/std"
]